version 0.70.01
	More commandline status info

version 0.70.00 ( 2011-01-17)
	Initial release

